Fixed file button margin so that the errors aren't too close to the button

--- a/linker_extension/nbextensions/common/common_style.css
+++ b/linker_extension/nbextensions/common/common_style.css
@@ -321,6 +321,7 @@ label.required:after {
   color:red;
 }
 #files-page .btn-file {
+  margin-top: 2px;
   margin-bottom: 5px;
 }
 #data-files-wrap input {
